// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calls out live ballot sheets in test mode 1`] = `
<div>
  <div
    class="sc-jTzLTM eOyjnu"
  >
    <div
      class="sc-gzVnrw bggTrE"
    >
      <div
        class="sc-htoDjs ipztHg"
      >
        <div
          class="sc-dnqmqq rGeTJ"
        >
          <div
            class="sc-iwsKbI jjxTtY"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-gZMcBi giNnHm"
          >
            Ballot Scanner
          </div>
        </div>
        <div
          class="sc-gqjmRU etjyPA"
        >
          <button
            class="sc-ifAKCX gKVbpr"
            type="button"
          >
            Confirm Ballot Removed and Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-bdVaJa kYuSve"
    >
      <div
        class="sc-bwzfXH hLOwzs"
      >
        <div
          class="sc-jzJRlG liWoYo"
        >
          <div
            class="sc-htpNat eawaaV"
          >
            <div
              class="sc-fjdhpX lhoICd"
            >
              Live Ballot
            </div>
            <p>
              This last scanned sheet 
              <strong>
                was not tabulated
              </strong>
              .
            </p>
            <p>
              Remove the LIVE ballot before continuing.
            </p>
          </div>
          <div
            class="sc-cSHVUG hmKULF"
          >
            <div>
              <img
                alt="front"
                src="/front/url"
              />
            </div>
            <div>
              <img
                alt="back"
                src="/back/url"
              />
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`calls out test ballot sheets in live mode 1`] = `
<div>
  <div
    class="sc-jTzLTM eOyjnu"
  >
    <div
      class="sc-gzVnrw bggTrE"
    >
      <div
        class="sc-htoDjs ipztHg"
      >
        <div
          class="sc-dnqmqq rGeTJ"
        >
          <div
            class="sc-iwsKbI jjxTtY"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-gZMcBi giNnHm"
          >
            Ballot Scanner
          </div>
        </div>
        <div
          class="sc-gqjmRU etjyPA"
        >
          <button
            class="sc-ifAKCX gKVbpr"
            type="button"
          >
            Confirm Ballot Removed and Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-bdVaJa kYuSve"
    >
      <div
        class="sc-bwzfXH hLOwzs"
      >
        <div
          class="sc-jzJRlG liWoYo"
        >
          <div
            class="sc-htpNat eawaaV"
          >
            <div
              class="sc-fjdhpX lhoICd"
            >
              Test Ballot
            </div>
            <p>
              This last scanned sheet 
              <strong>
                was not tabulated
              </strong>
              .
            </p>
            <p>
              Remove the TEST ballot before continuing.
            </p>
          </div>
          <div
            class="sc-cSHVUG hmKULF"
          >
            <div>
              <img
                alt="front"
                src="/front/url"
              />
            </div>
            <div>
              <img
                alt="back"
                src="/back/url"
              />
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`says the ballot sheet is blank if it is 1`] = `
<div>
  <div
    class="sc-jTzLTM eOyjnu"
  >
    <div
      class="sc-gzVnrw bggTrE"
    >
      <div
        class="sc-htoDjs ipztHg"
      >
        <div
          class="sc-dnqmqq rGeTJ"
        >
          <div
            class="sc-iwsKbI jjxTtY"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-gZMcBi giNnHm"
          >
            Ballot Scanner
          </div>
        </div>
        <div
          class="sc-gqjmRU etjyPA"
        >
          <button
            class="sc-ifAKCX hcRgUA"
            disabled=""
            type="button"
          >
            Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-bdVaJa kYuSve"
    >
      <div
        class="sc-bwzfXH hLOwzs"
      >
        <div
          class="sc-jzJRlG liWoYo"
        >
          <div
            class="sc-htpNat eawaaV"
          >
            <div
              class="sc-fjdhpX lhoICd"
            >
              Unknown Reason
            </div>
            <p>
              This last scanned sheet 
              <strong>
                was not tabulated
              </strong>
              .
            </p>
            <h4>
              Original Ballot Scan
            </h4>
            <p>
              Remove ballot and create a duplicate ballot for the Resolution Board to review.
              <br />
              <button
                class="sc-ifAKCX fGEpuB"
                type="button"
              >
                Original Ballot Removed
              </button>
            </p>
            <h4>
              Duplicate Ballot Scan
            </h4>
            <p>
              Confirm ballot sheet was reviewed by the Resolution Board and tabulate as ballow with issue which could not be determined.
              <br />
              <button
                class="sc-ifAKCX fGEpuB"
                type="button"
              >
                Tabulate Duplicate Ballot
              </button>
            </p>
          </div>
          <div
            class="sc-cSHVUG hmKULF"
          >
            <div>
              <img
                alt="front"
                src="/front/url"
              />
            </div>
            <div>
              <img
                alt="back"
                src="/back/url"
              />
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`says the ballot sheet is overvoted if it is 1`] = `
<div>
  <div
    class="sc-jTzLTM eOyjnu"
  >
    <div
      class="sc-gzVnrw bggTrE"
    >
      <div
        class="sc-htoDjs ipztHg"
      >
        <div
          class="sc-dnqmqq rGeTJ"
        >
          <div
            class="sc-iwsKbI jjxTtY"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-gZMcBi giNnHm"
          >
            Ballot Scanner
          </div>
        </div>
        <div
          class="sc-gqjmRU etjyPA"
        >
          <button
            class="sc-ifAKCX hcRgUA"
            disabled=""
            type="button"
          >
            Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-bdVaJa kYuSve"
    >
      <div
        class="sc-bwzfXH hLOwzs"
      >
        <div
          class="sc-jzJRlG liWoYo"
        >
          <div
            class="sc-htpNat eawaaV"
          >
            <div
              class="sc-fjdhpX lhoICd"
            >
              Overvote
            </div>
            <p>
              This last scanned sheet 
              <strong>
                was not tabulated
              </strong>
              .
            </p>
            <h4>
              Original Ballot Scan
            </h4>
            <p>
              Remove ballot and create a duplicate ballot for the Resolution Board to review.
              <br />
              <button
                class="sc-ifAKCX fGEpuB"
                type="button"
              >
                Original Ballot Removed
              </button>
            </p>
            <h4>
              Duplicate Ballot Scan
            </h4>
            <p>
              Confirm ballot sheet was reviewed by the Resolution Board and tabulate as ballot sheet with an
               
              <strong>
                overvote
              </strong>
              .
              <br />
              <button
                class="sc-ifAKCX fGEpuB"
                type="button"
              >
                Tabulate Duplicate Ballot
              </button>
            </p>
          </div>
          <div
            class="sc-cSHVUG hmKULF"
          >
            <div>
              <img
                alt="front"
                src="/front/url"
              />
            </div>
            <div>
              <img
                alt="back"
                src="/back/url"
              />
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`says the sheet is unreadable if it is 1`] = `
<div>
  <div
    class="sc-jTzLTM eOyjnu"
  >
    <div
      class="sc-gzVnrw bggTrE"
    >
      <div
        class="sc-htoDjs ipztHg"
      >
        <div
          class="sc-dnqmqq rGeTJ"
        >
          <div
            class="sc-iwsKbI jjxTtY"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-gZMcBi giNnHm"
          >
            Ballot Scanner
          </div>
        </div>
        <div
          class="sc-gqjmRU etjyPA"
        >
          <button
            class="sc-ifAKCX hcRgUA"
            disabled=""
            type="button"
          >
            Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-bdVaJa kYuSve"
    >
      <div
        class="sc-bwzfXH hLOwzs"
      >
        <div
          class="sc-jzJRlG liWoYo"
        >
          <div
            class="sc-htpNat eawaaV"
          >
            <div
              class="sc-fjdhpX lhoICd"
            >
              Unreadable
            </div>
            <p>
              This last scanned sheet 
              <strong>
                was not tabulated
              </strong>
              .
            </p>
            <h4>
              Original Ballot Scan
            </h4>
            <p>
              Remove ballot and create a duplicate ballot for the Resolution Board to review.
              <br />
              <button
                class="sc-ifAKCX fGEpuB"
                type="button"
              >
                Original Ballot Removed
              </button>
            </p>
            <h4>
              Duplicate Ballot Scan
            </h4>
            <p>
              Confirm sheet was reviewed by the Resolution Board and tabulate as 
              <strong>
                unreadable
              </strong>
              .
              <br />
              <button
                class="sc-ifAKCX fGEpuB"
                type="button"
              >
                Tabulate Duplicate Ballot
              </button>
            </p>
          </div>
          <div
            class="sc-cSHVUG hmKULF"
          >
            <div>
              <img
                alt="front"
                src="/front/url"
              />
            </div>
            <div>
              <img
                alt="back"
                src="/back/url"
              />
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;
